fixed logo on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,6 @@ header {
 	align-items: center;
 
 	#logo {
-		max-width: 130px;
 		height: calc(0.95 * var(--header_height));
 		padding: calc(0.1 * var(--header_height));
 		box-sizing: border-box;
@@ -72,7 +71,6 @@ header {
 			border-width: calc(0.05 * var(--header_height));
 			border-style: solid;
 			box-sizing: border-box;
-			width: 100%;
 			height: 100%;
 		}
 	}
@@ -108,10 +106,8 @@ header {
 main {
 	padding-top: var(--header_height);
 	/* font-size: var(--font_h1); */
-	scroll-snap-type: mandatory;
 
 	.page {
-		scroll-snap-align: start;
 		/* width: 100%; */
 		min-height: 100vh;
 		display: flex;
